[gd_scene load_steps=10 format=3 uid="uid://urgscxvof7o8"]

[ext_resource type="Script" path="res://game_session/setup/setup_root.gd" id="1_autkv"]
[ext_resource type="Script" path="res://game_session/setup/PlayerValue.gd" id="2_eoobw"]
[ext_resource type="ButtonGroup" uid="uid://bfis28ta025kj" path="res://game_session/setup/unit_selection_button_group.tres" id="3_fneyt"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_nnlnq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_pkpi8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_xfxhw"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_fq8f0"]
[ext_resource type="Script" path="res://game_session/setup/player_setup_controller.gd" id="9_f4w08"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="9_wjebg"]

[node name="SetupRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_autkv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_right = 188.0
offset_bottom = 325.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Margins" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="MarginContainer/PanelContainer/Margins"]
layout_mode = 2
alignment = 1

[node name="VBox" type="VBoxContainer" parent="MarginContainer/PanelContainer/Margins/HBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBox" type="HBoxContainer" parent="MarginContainer/PanelContainer/Margins/HBox/VBox"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBox/HBox"]
layout_mode = 2
text = "Setup:"
horizontal_alignment = 1

[node name="Phase" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "FILL_CITIES_FORTS"
horizontal_alignment = 1

[node name="PhaseInstructions" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Deploy one unit on each City and Fortress tile inside your borders.
"
autowrap_mode = 3

[node name="CurrentPlayer" type="HBoxContainer" parent="MarginContainer/PanelContainer/Margins/HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBox/CurrentPlayer"]
layout_mode = 2
text = "Current Player:"

[node name="Value" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBox/CurrentPlayer"]
layout_mode = 2
text = "Orfburg (Computer)"
script = ExtResource("2_eoobw")

[node name="AutoSetup" type="Button" parent="MarginContainer/PanelContainer/Margins/HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 1
toggle_mode = true
text = "Auto Setup Remaining"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/PanelContainer/Margins/HBox"]
layout_mode = 2

[node name="Selection" type="VBoxContainer" parent="MarginContainer/PanelContainer/Margins/HBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/Selection"]
layout_mode = 2
text = "Place:"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/PanelContainer/Margins/HBox/Selection"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Infantry" type="Button" parent="MarginContainer/PanelContainer/Margins/HBox/Selection/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
toggle_mode = true
button_pressed = true
button_group = ExtResource("3_fneyt")
text = "Infantry"

[node name="Cavalry" type="Button" parent="MarginContainer/PanelContainer/Margins/HBox/Selection/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
toggle_mode = true
button_group = ExtResource("3_fneyt")
text = "Cavalry"

[node name="Artillery" type="Button" parent="MarginContainer/PanelContainer/Margins/HBox/Selection/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
toggle_mode = true
button_group = ExtResource("3_fneyt")
text = "Artillery"

[node name="Duke" type="Button" parent="MarginContainer/PanelContainer/Margins/HBox/Selection/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
toggle_mode = true
button_group = ExtResource("3_fneyt")
text = "Duke"

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/PanelContainer/Margins/HBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Margins/HBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer"]
layout_mode = 2
text = "Units remaining to be placed:"

[node name="UnitRemainingCounts" type="GridContainer" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="FactionHeader" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
visible = false
layout_mode = 2
text = "Faction"

[node name="EmptySpacer" type="Control" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2

[node name="InfantryHeader" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "Infantry"

[node name="CavalryHeader" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "Cavalry"

[node name="ArtilleryHeader" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "Artillery"

[node name="DukeHeader" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "Duke"

[node name="Orfburg" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "Orfburg"

[node name="OrfburgInfantry" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "10"
horizontal_alignment = 2

[node name="OrfburgCavalry" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "10"
horizontal_alignment = 2

[node name="OrfburgArtillery" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "10"
horizontal_alignment = 2

[node name="OrfburgDuke" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "1"
horizontal_alignment = 2

[node name="Wulfenburg" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "WulfenBurg"

[node name="WulfenburgInfantry" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "10"
horizontal_alignment = 2

[node name="WulfenburgCavalry" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "10"
horizontal_alignment = 2

[node name="WulfenburgArtillery" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "10"
horizontal_alignment = 2

[node name="WulfenburgDuke" type="Label" parent="MarginContainer/PanelContainer/Margins/HBox/VBoxContainer/UnitRemainingCounts"]
layout_mode = 2
text = "1"
horizontal_alignment = 2

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_nnlnq")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("6_pkpi8")
initial_state = NodePath("Uninitialized")

[node name="Uninitialized" type="Node" parent="StateChart/Root"]
script = ExtResource("7_xfxhw")

[node name="to start" type="Node" parent="StateChart/Root/Uninitialized"]
script = ExtResource("8_fq8f0")
to = NodePath("../../Started/Current Phase")
event = &"start"

[node name="Started" type="Node" parent="StateChart/Root"]
script = ExtResource("9_wjebg")

[node name="Current Phase" type="Node" parent="StateChart/Root/Started"]
script = ExtResource("6_pkpi8")
initial_state = NodePath("Fill Cities And Forts")

[node name="Fill Cities And Forts" type="Node" parent="StateChart/Root/Started/Current Phase"]
script = ExtResource("7_xfxhw")

[node name="cities and forts filled" type="Node" parent="StateChart/Root/Started/Current Phase/Fill Cities And Forts"]
script = ExtResource("8_fq8f0")
to = NodePath("../../Place Remaining Units In Own Territory")
event = &"next phase"

[node name="Place Remaining Units In Own Territory" type="Node" parent="StateChart/Root/Started/Current Phase"]
script = ExtResource("7_xfxhw")

[node name="to finished" type="Node" parent="StateChart/Root/Started/Current Phase/Place Remaining Units In Own Territory"]
script = ExtResource("8_fq8f0")
to = NodePath("../../../../Finished")
event = &"end setup"

[node name="Current Player" type="Node" parent="StateChart/Root/Started"]
script = ExtResource("6_pkpi8")
initial_state = NodePath("Player 1")

[node name="Player 1" type="Node" parent="StateChart/Root/Started/Current Player"]
script = ExtResource("7_xfxhw")

[node name="to player 2" type="Node" parent="StateChart/Root/Started/Current Player/Player 1"]
script = ExtResource("8_fq8f0")
to = NodePath("../../Player 2")
event = &"next player"

[node name="Player 2" type="Node" parent="StateChart/Root/Started/Current Player"]
script = ExtResource("7_xfxhw")

[node name="to player 1" type="Node" parent="StateChart/Root/Started/Current Player/Player 2"]
script = ExtResource("8_fq8f0")
to = NodePath("../../Player 1")
event = &"next player"

[node name="Finished" type="Node" parent="StateChart/Root"]
script = ExtResource("7_xfxhw")

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("9_f4w08")

[connection signal="pressed" from="MarginContainer/PanelContainer/Margins/HBox/VBox/AutoSetup" to="." method="_on_auto_setup_pressed"]
[connection signal="state_entered" from="StateChart/Root/Started/Current Phase/Fill Cities And Forts" to="." method="_on_fill_cities_and_forts_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Started/Current Phase/Place Remaining Units In Own Territory" to="." method="_on_place_remaining_units_in_own_territory_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Started/Current Player/Player 1" to="." method="_on_player_1_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Started/Current Player/Player 2" to="." method="_on_player_2_state_entered"]
